fixed image border-radius on mobile devices

--- a/src/app/industries/industries.component.scss
+++ b/src/app/industries/industries.component.scss
@@ -109,7 +109,10 @@ h1 {
 input {
   width: 90%;
   height: 100%;
-  //max-height: 100%;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 // image headings
